# Creating-autonomous-AI-agents

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  cli.py  docker-compose.yml  requirements-dev.txt  requirements.txt  run_agent.py  setup.cfg
.github/workflows/: ci.yml  release.yml
ai_anime_agent/: __init__.py  agent.py  cli.py
ai_multi_agent/: agents.py  orchestrator.py
ai_org_agent/: __init__.py  agents.py  orchestrator.py  vector_store.py
ai_safety_agent/: __init__.py  agent.py  cli.py
ai_tpm_agent/: __init__.py  agent.py
ai_tpm_agent.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
creating_autonomous_ai_agents.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
k8s/: deployment.yaml
market_ops/: __init__.py  api.py  cli.py  config.py  db.py  notifications.py  orchestrator.py  scheduler.py
market_ops/data/: finance.py  news.py  social.py
market_ops/experiments/: __init__.py  run.py
market_ops/models/: reinforcement.py  scoring.py
market_ops/tests/: test_api.py  test_data_fetchers.py  test_orchestrator.py
tests/: test_agent.py  test_anime_agent.py  test_multi_agent.py  test_org_agent.py  test_org_agent_extras.py  test_safety_agent.py  test_safety_agent_cli.py  test_vector_store.py
