[metadata]
name = creating-autonomous-ai-agents
version = 0.1.0
description = Collection of autonomous AI agents projects
author = Reis Fitzsimmons

[options]
packages = find:
install_requires =
    networkx
    pandas
    jira
    PyGithub
    pytest
    scikit-learn
    schedule
    fastapi
    uvicorn
    requests
    openai
    langchain
    tweepy

[options.packages.find]
exclude =
    tests

# project packages are discovered automatically
packages = find:

[options.entry_points]
console_scripts =
    tpm-agent=run_agent:main
    market-ops=market_ops.cli:main
    anime-agent=ai_anime_agent.cli:main
    safety-agent=ai_safety_agent.cli:main

[mypy]
ignore_missing_imports = True
check_untyped_defs = True
